# maximum-flow-by-augmenting-paths-in-almost-quadratic-time

./: .gitignore  README.md  flake.nix  pyproject.toml
plots/: comparer.py  plotter.py  preprocess.py
src/: benchmark.py  classic_push_relabel.py  expander_decomposition.py  expander_generator.py  expander_hierarchy_generator.py  gen_rand_weights.py  hello.py  phi_expander_generator.py  reasonable.py  sparse_cut.py  utils.py  visualisation.py  weighted_push_relabel.py
src/flows/: __init__.py  capacity_scaling.py  classic_push_relabel.py  dinic.py  edmond_karp.py  utils.py
tests/: conftest.py  flows.py  known_inputs.py  large_inputs.py  random_inputs.py  test_dags_of_expanders.py  test_data.py  test_debugger.py  test_expander_decomposition.py  test_expander_hierarchy.py  test_flows.py  test_known_inputs.py  test_random.py  test_random_inputs.py  test_results.py  test_sparse_cut.py  test_topological_sort.py  test_weighted_push_relabel.py  utils.py
tests/data/: dag_edges_100.txt  dag_edges_150.txt  dag_edges_200.txt  dag_edges_25.txt  dag_edges_250.txt  dag_edges_50.txt  dag_edges_500.txt  fully_connected_edges_20.txt  fully_connected_edges_210.txt  fully_connected_edges_380.txt  fully_connected_edges_600.txt  fully_connected_edges_90.txt  hierarchy.json  line_edges_100.txt  line_edges_150.txt  line_edges_200.txt  line_edges_25.txt  line_edges_250.txt  line_edges_50.txt  line_edges_500.txt
tests/data/expander_hierarchies/: expander_hierarchy_1747051901.872247.json  expander_hierarchy_1747051902.809133.json  expander_hierarchy_1747051903.546176.json  expander_hierarchy_1747053415.611059.json  expander_hierarchy_1747053985.803035.json  expander_hierarchy_1747054076.369448.json  expander_hierarchy_1747054174.816541.json  expander_hierarchy_1747054308.564438.json  expander_hierarchy_1747054457.376207.json  expander_hierarchy_1747122125.471656.json  expander_hierarchy_1747122201.12634.json  expander_hierarchy_1747123224.894472.json  expander_hierarchy_1747123538.108031.json  expander_hierarchy_1747123988.881056.json  expander_hierarchy_1747124431.540602.json  expander_hierarchy_1747124450.887991.json  expander_hierarchy_1747124525.037968.json  expander_hierarchy_1747124584.037672.json  expander_hierarchy_1747124586.472667.json  expander_hierarchy_1747124613.516975.json  expander_hierarchy_1747125210.182249.json  expander_hierarchy_1747125211.881799.json  expander_hierarchy_1747125234.483691.json  expander_hierarchy_1747125237.715452.json  expander_hierarchy_1747125240.4001.json  expander_hierarchy_1747125247.113224.json  expander_hierarchy_1747130606.158901.json  expander_hierarchy_1747130613.442961.json  expander_hierarchy_1747130811.308224.json  expander_hierarchy_1747130811.736352.json  expander_hierarchy_1747130812.076269.json  expander_hierarchy_1747130815.028514.json  expander_hierarchy_1747130815.473021.json  expander_hierarchy_1747130828.793346.json  expander_hierarchy_1747130829.471333.json  expander_hierarchy_1747130830.523477.json  expander_hierarchy_1747130842.232024.json  expander_hierarchy_1747130843.018992.json  expander_hierarchy_1747132198.405419.json  expander_hierarchy_1747132199.693784.json  (+77 more)
tests/data/fully_connected/: 0000_2_2_4.txt  0002_2_2_3.txt  0003_4_12_6.txt  0004_4_12_11.txt  0005_4_12_17.txt  0006_8_56_58.txt  0007_8_56_61.txt  0008_8_56_59.txt  0009_16_240_250.txt  0010_16_240_278.txt  0011_16_240_235.txt  0012_32_992_951.txt  0013_32_992_858.txt  0014_32_992_965.txt  0015_64_4032_4132.txt  0016_64_4032_4100.txt  0017_64_4032_3943.txt
tests/data/fully_connected_same_cap/: 0000_2_2_3.txt  0003_4_12_24.txt  0004_4_12_18.txt  0005_4_12_21.txt  0006_8_56_63.txt  0007_8_56_91.txt  0008_8_56_98.txt  0009_16_240_120.txt  0010_16_240_450.txt  0011_16_240_195.txt  0012_32_992_217.txt  0013_32_992_1550.txt  0014_32_992_1829.txt  0015_64_4032_2331.txt  0016_64_4032_2016.txt  0017_64_4032_3276.txt
tests/data/fully_connected_same_cap_1.5/: 0001_16_240_75.txt  0002_16_240_45.txt  0003_16_240_150.txt  0004_24_552_644.txt  0005_24_552_161.txt  0006_24_552_207.txt  0007_36_1260_1540.txt  0008_36_1260_2310.txt  0009_36_1260_1435.txt  0010_54_2862_4505.txt  0011_54_2862_1060.txt  0012_54_2862_2438.txt  0013_81_6480_7600.txt  0014_81_6480_6720.txt  0015_81_6480_6080.txt  0016_122_14762_26862.txt  0017_122_14762_18876.txt  0018_122_14762_3146.txt  0019_183_33306_53144.txt  0020_183_33306_32032.txt  0021_183_33306_57512.txt  0022_275_75350_127958.txt  0023_275_75350_55896.txt  0024_275_75350_147412.txt
tests/flows/: __init__.py  capacity_scaling.py  edmond_karp.py  push_relabel.py  utils.py
tests/scripts/: adj_matrix_to_edge_list.py  convert.py  expander_generator.py  expander_hierarchy_generator.py  expander_multiplication.py  generator_dag.py  generator_non_dag.py  generator_results.py  test_dag.py  waissi.py
visualisation/: code.js  index.html
(+384 files in other folders)
