[project]
name = "maximum-flow-by-augmenting-paths-in-almost-quadratic-time"
version = "0.1.0"
description = ""
authors = [
    {name = "albe2669",email = "albert@risenielsen.dk"},
    {name = "Adrian Borup", email = "adrian@borup.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "meson>=1.7.0",
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "pytest-profiling>=1.8.1",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.27.1",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[tool.pytest.ini_options]
addopts = "-m \"(paper or sparse_cut) and not notdag and not correct and not maxflow and not large and not benchmark and not waissi\""

markers = [
    "paper: tests for the paper algorithm (deselect with '-m \"not paper\"')",
    "correct: tests for the known good algorithms (deselect with '-m \"not correct\"')",
    "maxflow: marks tests as maxflow data (deselect with '-m \"not maxflow\"')",
    "waissi: marks tests as waissi data (deselect with '-m \"not waissi\"')",
    "large: marks tests as large (deselect with '-m \"not large\"')",
    "notdag: marks tests as not directed acyclic graphs (deselect with '-m \"not notdag\"')",
    "w_top_sort: uses a topological-sort based weight function",
    "benchmark: marks tests as benchmarks",
    "expander: graphs with expanders",
    "sparse_cut: sparse_cut tests",
]

[tool.ruff.lint]
ignore=["E741"]


