[project]
name = "maximum-flow-by-augmenting-paths-in-almost-quadratic-time"
version = "0.1.0"
description = ""
authors = [
    {name = "albe2669",email = "albert@risenielsen.dk"},
    {name = "Adrian Borup", email = "adrian@borup.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "meson>=1.7.0",
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "pytest-profiling>=1.8.1",
    "scipy>=1.15.2",
    "pytest>=8.3.4",
]

[dependency-groups]
dev = [
    "basedpyright>=1.27.1",
    "ruff>=0.9.6",
]

[tool.pytest.ini_options]
addopts = "-m \"not large_graph\""

markers = [
    "weighted_push_relabel: tests for the weighted_push_relabel algorith (deselect with '-m \"not weighted_push_relabel\"')",
    "with_flow_weight: tests where weighted_push_relabel uses flow based weights (deselect with '-m \"not with_flow_weight\"')",
    "with_top_sort: tests where weighted_push_relabel uses topological sort based weights (deselect with '-m \"not with_top_sort\"')",
    "correct_flow: sanity tests that run known good flow algorithms (deselect with '-m \"not correct_flow\"')",
    "large_graph: tests running on large graphs, can be slow (deselect with '-m \"not large\"')",
    "maxflow: tests running on data from the maxflow Kattis problem (deselect with '-m \"not maxflow\"')",
    "expander: graphs with expanders",
    "sparse_cut: sparse_cut tests",
    "expander_decomposition: expander_decomposition tests",
]

[tool.ruff.lint]
ignore=["E741"]


