[project]
name = "maximum-flow-by-augmenting-paths-in-almost-quadratic-time"
version = "0.1.0"
description = ""
authors = [
    {name = "albe2669",email = "albert@risenielsen.dk"},
    {name = "Adrian Borup", email = "adrian@borup.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib==3.10.1",
    "meson>=1.7.0",
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "pytest-profiling>=1.8.1",
    "scipy>=1.15.2",
    "pytest>=8.3.4",
    "pathlib>=1.0.1",
    "ipykernel>=6.29.5",
]

[dependency-groups]
dev = [
    "basedpyright>=1.27.1",
    "ruff>=0.9.6",
]

[tool.pytest.ini_options]
addopts = "-m \"not slow and not expander_decomposition and not broken\""

markers = [
    "weighted_push_relabel: tests for the weighted_push_relabel algorith (deselect with '-m \"not weighted_push_relabel\"')",
    "with_flow_weight: tests where weighted_push_relabel uses flow based weights (deselect with '-m \"not with_flow_weight\"')",
    "with_top_sort: tests where weighted_push_relabel uses topological sort based weights (deselect with '-m \"not with_top_sort\"')",
    "with_expander_hierarchy: tests where weighted_push_relabel uses expander hierarchy based weights (deselect with '-m \"not with_expander_hierarchy\"')",
    "correct_flow: sanity tests that run known good flow algorithms (deselect with '-m \"not correct_flow\"')",
    "slow: slow tests, usually just a really large graph (select with '-m \"slow\"')",
    "maxflow: tests running on data from the maxflow Kattis problem (deselect with '-m \"not maxflow\"')",
    "expander: graphs with expanders",
    "sparse_cut: sparse_cut tests",
    "expander_decomposition: expander_decomposition tests",
    "broken: tests that are broken",
]

[tool.ruff.lint]
ignore=["E741"]


